--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,10 @@
 body {
-    background: rgb(185, 224, 211);
+    background: rgb(213, 220, 218);
 }
 
 .container {
-    margin: 120 auto;
-    max-width: 600px;;
+    margin: 0 auto;
+    max-width: 600px;
 }
 
 h1 {
@@ -27,12 +27,12 @@ form {
     margin-bottom: 20px;
 }
 
-.promp {
+.instructions {
     padding: 10px;
     border: 1px solid grey;
-    width: 80px;
+    width: 400px;
     font-size: 18px;
-    border-radius: 50px;
+    border-radius: 30px;
     line-height: 22px;
     color: #282828
 }
